modenize code